@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2022 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,6 +14,8 @@ package org.openhab.binding.openwebnet.internal.handler;
 
 import static org.openhab.binding.openwebnet.internal.OpenWebNetBindingConstants.*;
 
+import java.time.Duration;
+import java.time.ZonedDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -30,6 +32,7 @@ import org.openhab.binding.openwebnet.internal.OpenWebNetBindingConstants;
 import org.openhab.binding.openwebnet.internal.discovery.OpenWebNetDeviceDiscoveryService;
 import org.openhab.binding.openwebnet.internal.handler.config.OpenWebNetBusBridgeConfig;
 import org.openhab.binding.openwebnet.internal.handler.config.OpenWebNetZigBeeBridgeConfig;
+import org.openhab.binding.openwebnet.internal.serial.SerialPortProviderAdapter;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ChannelUID;
@@ -48,7 +51,9 @@ import org.openwebnet4j.OpenGateway;
 import org.openwebnet4j.USBGateway;
 import org.openwebnet4j.communication.OWNAuthException;
 import org.openwebnet4j.communication.OWNException;
+import org.openwebnet4j.message.Alarm;
 import org.openwebnet4j.message.Automation;
+import org.openwebnet4j.message.Auxiliary;
 import org.openwebnet4j.message.BaseOpenMessage;
 import org.openwebnet4j.message.CEN;
 import org.openwebnet4j.message.EnergyManagement;
@@ -56,6 +61,7 @@ import org.openwebnet4j.message.FrameException;
 import org.openwebnet4j.message.GatewayMgmt;
 import org.openwebnet4j.message.Lighting;
 import org.openwebnet4j.message.OpenMessage;
+import org.openwebnet4j.message.Scenario;
 import org.openwebnet4j.message.Thermoregulation;
 import org.openwebnet4j.message.What;
 import org.openwebnet4j.message.Where;
@@ -65,11 +71,13 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * The {@link OpenWebNetBridgeHandler} is responsible for handling communication with gateways and handling events.
+ * The {@link OpenWebNetBridgeHandler} is responsible for handling communication
+ * with gateways and handling events.
  *
- * @author Massimo Valla - Initial contribution
+ * @author Massimo Valla - Initial contribution, Lighting, Automation, Scenario
  * @author Andrea Conte - Energy management, Thermoregulation
  * @author Gilberto Cocchi - Thermoregulation
+ * @author Giovanni Fabiani - Aux
  */
 @NonNullByDefault
 public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implements GatewayListener {
@@ -78,16 +86,24 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
 
     private static final int GATEWAY_ONLINE_TIMEOUT_SEC = 20; // Time to wait for the gateway to become connected
 
-    private static final int REFRESH_ALL_DEVICES_DELAY_MSEC = 500; // Delay to wait before sending all devices refresh
-                                                                   // request after a connect/reconnect
-    private static final int REFRESH_ALL_CHECK_DELAY_SEC = 20;
+    private static final int REFRESH_ALL_DEVICES_DELAY_MSEC = 500; // Delay to wait before trying again another all
+                                                                   // devices refresh request after a connect/reconnect
+    private static final int REFRESH_ALL_DEVICES_DELAY_MAX_MSEC = 15000; // Maximum delay to wait for all devices
+                                                                         // refresh after a connect/reconnect
 
-    private static long lastRegisteredDeviceTS = -1; // timestamp when the last device has been associated to the bridge
+    private static final int REFRESH_ALL_CHECK_DELAY_SEC = 20; // Delay to wait to check which devices are
+                                                               // online/offline
+
+    private static final int DATETIME_SYNCH_DIFF_SEC = 60; // Difference from BUS date time
+
+    private long lastRegisteredDeviceTS = -1; // timestamp when the last device has been associated to the bridge
+    private long refreshAllDevicesDelay = 0; // delay waited before starting all devices refresh
 
     public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = OpenWebNetBindingConstants.BRIDGE_SUPPORTED_THING_TYPES;
 
     // ConcurrentHashMap of devices registered to this BridgeHandler
-    // association is: ownId (String) -> OpenWebNetThingHandler, with ownId = WHO.WHERE
+    // association is: ownId (String) -> OpenWebNetThingHandler, with ownId =
+    // WHO.WHERE
     private Map<String, @Nullable OpenWebNetThingHandler> registeredDevices = new ConcurrentHashMap<>();
     private Map<String, Long> discoveringDevices = new ConcurrentHashMap<>();
 
@@ -103,6 +119,7 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
 
     private boolean scanIsActive = false; // a device scan has been activated by OpenWebNetDeviceDiscoveryService;
     private boolean discoveryByActivation;
+    private boolean dateTimeSynch = false;
 
     public OpenWebNetBridgeHandler(Bridge bridge) {
         super(bridge);
@@ -151,19 +168,23 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
     }
 
     /**
-     * Init a ZigBee gateway based on config
+     * Init a Zigbee gateway based on config
      */
     private @Nullable OpenGateway initZigBeeGateway() {
-        logger.debug("Initializing ZigBee USB Gateway");
+        logger.debug("Initializing Zigbee USB Gateway");
         OpenWebNetZigBeeBridgeConfig zbBridgeConfig = getConfigAs(OpenWebNetZigBeeBridgeConfig.class);
         String serialPort = zbBridgeConfig.getSerialPort();
         if (serialPort == null || serialPort.isEmpty()) {
-            logger.warn("Cannot connect ZigBee USB Gateway. No serial port has been provided in Bridge configuration.");
+            logger.warn("Cannot connect Zigbee USB Gateway. No serial port has been provided in Bridge configuration.");
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "@text/offline.conf-error-no-serial-port");
             return null;
         } else {
-            return new USBGateway(serialPort);
+            USBGateway tmpUSBGateway = new USBGateway(serialPort);
+            tmpUSBGateway.setSerialPortProvider(new SerialPortProviderAdapter());
+            logger.debug("**** -SPI- ****  OpenWebNetBridgeHandler :: setSerialPortProvider to: {}",
+                    tmpUSBGateway.getSerialPortProvider());
+            return tmpUSBGateway;
         }
     }
 
@@ -190,8 +211,10 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
                 passwdMasked = "******";
             }
             discoveryByActivation = busBridgeConfig.getDiscoveryByActivation();
-            logger.debug("Creating new BUS gateway with config properties: {}:{}, pwd={}, discoveryByActivation={}",
-                    host, port, passwdMasked, discoveryByActivation);
+            dateTimeSynch = busBridgeConfig.getDateTimeSynch();
+            logger.debug(
+                    "Creating new BUS gateway with config properties: {}:{}, pwd={}, discoveryByActivation={}, dateTimeSynch={}",
+                    host, port, passwdMasked, discoveryByActivation, dateTimeSynch);
             return new BUSGateway(host, port, passwd);
         }
     }
@@ -250,13 +273,11 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(OpenWebNetDeviceDiscoveryService.class);
+        return Set.of(OpenWebNetDeviceDiscoveryService.class);
     }
 
     /**
      * Search for devices connected to this bridge handler's gateway
-     *
-     * @param listener to receive device found notifications
      */
     public synchronized void searchDevices() {
         scanIsActive = true;
@@ -288,10 +309,10 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
     public void onNewDevice(@Nullable Where w, @Nullable OpenDeviceType deviceType, @Nullable BaseOpenMessage message) {
         OpenWebNetDeviceDiscoveryService discService = deviceDiscoveryService;
         if (discService != null) {
-            if (w != null && deviceType != null) {
+            if (deviceType != null) {
                 discService.newDiscoveryResult(w, deviceType, message);
             } else {
-                logger.warn("onNewDevice with null where/deviceType, msg={}", message);
+                logger.warn("onNewDevice with null deviceType, msg={}", message);
             }
         } else {
             logger.warn("onNewDevice but null deviceDiscoveryService");
@@ -304,7 +325,8 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
     }
 
     /**
-     * Notifies that the scan has been stopped/aborted by OpenWebNetDeviceDiscoveryService
+     * Notifies that the scan has been stopped/aborted by
+     * OpenWebNetDeviceDiscoveryService
      */
     public void scanStopped() {
         scanIsActive = false;
@@ -320,7 +342,8 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
         }
         // we support these types only
         if (baseMsg instanceof Lighting || baseMsg instanceof Automation || baseMsg instanceof EnergyManagement
-                || baseMsg instanceof Thermoregulation || baseMsg instanceof CEN) {
+                || baseMsg instanceof Thermoregulation || baseMsg instanceof CEN || baseMsg instanceof Scenario
+                || baseMsg instanceof Alarm) {
             BaseOpenMessage bmsg = baseMsg;
             if (baseMsg instanceof Lighting) {
                 What what = baseMsg.getWhat();
@@ -410,32 +433,44 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
         int total = things.size();
         logger.debug("--- FOUND {} things by getThings()", total);
         if (total > 0) {
-            if (registeredDevices.isEmpty()
-                    || (System.currentTimeMillis() - lastRegisteredDeviceTS < REFRESH_ALL_DEVICES_DELAY_MSEC)) {
-                // if a device has been registered with the bridge just now, let's wait for other devices: re-schedule
+            if (registeredDevices.isEmpty()) { // no registered device yet
+                if (refreshAllDevicesDelay < REFRESH_ALL_DEVICES_DELAY_MAX_MSEC) {
+                    logger.debug("--- REGISTER device not started yet... re-scheduling refreshAllBridgeDevices()");
+                    refreshAllDevicesDelay += REFRESH_ALL_DEVICES_DELAY_MSEC * 3;
+                    refreshAllSchedule = scheduler.schedule(this::refreshAllBridgeDevices,
+                            REFRESH_ALL_DEVICES_DELAY_MSEC * 3, TimeUnit.MILLISECONDS);
+                    return;
+                } else {
+                    logger.warn(
+                            "--- --- NONE OF {} CHILD DEVICE(S) has REGISTERED with bridge {}: check Things configuration (stopping refreshAllBridgeDevices)",
+                            total, thing.getUID());
+                    refreshAllDevicesDelay = 0;
+                    return;
+                }
+            } else if (System.currentTimeMillis() - lastRegisteredDeviceTS < REFRESH_ALL_DEVICES_DELAY_MSEC) {
+                // a device has been registered with the bridge just now, let's wait for other
+                // devices: re-schedule
                 // refreshAllDevices
-                logger.debug(
-                        "--- REGISTER device not started or just called... re-scheduling refreshAllBridgeDevices()");
+                logger.debug("--- REGISTER device just called... re-scheduling refreshAllBridgeDevices()");
                 refreshAllSchedule = scheduler.schedule(this::refreshAllBridgeDevices, REFRESH_ALL_DEVICES_DELAY_MSEC,
                         TimeUnit.MILLISECONDS);
-            } else {
-                for (Thing ownThing : things) {
-                    OpenWebNetThingHandler hndlr = (OpenWebNetThingHandler) ownThing.getHandler();
-                    if (hndlr != null) {
-                        howMany++;
-                        logger.debug("--- REFRESHING ALL DEVICES FOR thing #{}/{}: {}", howMany, total,
-                                ownThing.getUID());
-                        hndlr.refreshAllDevices();
-                    } else {
-                        logger.warn("--- No handler for thing {}", ownThing.getUID());
-                    }
-                }
-                logger.debug("--- --- COMPLETED REFRESH all devices for bridge {}", thing.getUID());
-
-                // set a check that all things are Online
-                refreshAllSchedule = scheduler.schedule(() -> checkAllRefreshed(things), REFRESH_ALL_CHECK_DELAY_SEC,
-                        TimeUnit.SECONDS);
+                return;
             }
+            for (Thing ownThing : things) {
+                OpenWebNetThingHandler hndlr = (OpenWebNetThingHandler) ownThing.getHandler();
+                if (hndlr != null) {
+                    howMany++;
+                    logger.debug("--- REFRESHING ALL DEVICES FOR thing #{}/{}: {}", howMany, total, ownThing.getUID());
+                    hndlr.refreshAllDevices();
+                } else {
+                    logger.warn("--- No handler for thing {}", ownThing.getUID());
+                }
+            }
+            logger.debug("--- --- COMPLETED REFRESH all devices for bridge {}", thing.getUID());
+            refreshAllDevicesDelay = 0;
+            // set a check that all things are Online
+            refreshAllSchedule = scheduler.schedule(() -> checkAllRefreshed(things), REFRESH_ALL_CHECK_DELAY_SEC,
+                    TimeUnit.SECONDS);
         } else {
             logger.debug("--- --- NO CHILD DEVICE to REFRESH for bridge {}", thing.getUID());
         }
@@ -473,15 +508,18 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
             return; // we ignore ACKS/NACKS
         }
         // GATEWAY MANAGEMENT
-        if (msg instanceof GatewayMgmt) {
-            // noop
+        if (msg instanceof GatewayMgmt gwMsg) {
+            if (dateTimeSynch && GatewayMgmt.DimGatewayMgmt.DATETIME.equals(gwMsg.getDim())) {
+                checkDateTimeDiff(gwMsg);
+            }
             return;
         }
 
         BaseOpenMessage baseMsg = (BaseOpenMessage) msg;
         // let's try to get the Thing associated with this message...
         if (baseMsg instanceof Lighting || baseMsg instanceof Automation || baseMsg instanceof EnergyManagement
-                || baseMsg instanceof Thermoregulation || baseMsg instanceof CEN) {
+                || baseMsg instanceof Thermoregulation || baseMsg instanceof CEN || baseMsg instanceof Auxiliary
+                || baseMsg instanceof Scenario || baseMsg instanceof Alarm) {
             String ownId = ownIdFromMessage(baseMsg);
             logger.debug("ownIdFromMessage({}) --> {}", baseMsg, ownId);
             OpenWebNetThingHandler deviceHandler = registeredDevices.get(ownId);
@@ -491,7 +529,7 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
                         || (discoveryByActivation && !scanIsActive))) {
                     discoverByActivation(baseMsg);
                 } else {
-                    logger.debug("ownId={} has NO DEVICE associated, ignoring it", ownId);
+                    logger.debug("ownId={} has NO DEVICE associated to bridge {}: ignoring it", ownId, thing.getUID());
                 }
             } else {
                 deviceHandler.handleMessage(baseMsg);
@@ -499,6 +537,31 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
         } else {
             logger.debug("BridgeHandler ignoring frame {}. WHO={} is not supported by this binding", baseMsg,
                     baseMsg.getWho());
+        }
+    }
+
+    private void checkDateTimeDiff(GatewayMgmt gwMsg) {
+        try {
+            ZonedDateTime now = ZonedDateTime.now();
+            ZonedDateTime gwTime = GatewayMgmt.parseDateTime(gwMsg);
+            long diff = Math.abs(Duration.between(now, gwTime).toSeconds());
+            if (diff > DATETIME_SYNCH_DIFF_SEC) {
+                logger.debug("checkDateTimeDiff: difference is more than 60s: {}s", diff);
+                OpenGateway gw = gateway;
+                if (gw != null) {
+                    logger.debug("checkDateTimeDiff: synch DateTime to: {}", now);
+                    try {
+                        gw.send(GatewayMgmt.requestSetDateTime(now));
+                    } catch (OWNException e) {
+                        logger.warn("checkDateTimeDiff: Exception while sending set DateTime command: {}",
+                                e.getMessage());
+                    }
+                }
+            } else {
+                logger.debug("checkDateTimeDiff: DateTime difference: {}s", diff);
+            }
+        } catch (FrameException e) {
+            logger.warn("checkDateTimeDiff: FrameException while parsing {}", e.getMessage());
         }
     }
 
@@ -512,9 +575,9 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
             logger.warn("received onConnected() but gateway is null");
             return;
         }
-        if (gw instanceof USBGateway) {
-            logger.info("---- CONNECTED to ZigBee USB gateway bridge '{}' (serialPort: {})", thing.getUID(),
-                    ((USBGateway) gw).getSerialPortName());
+        if (gw instanceof USBGateway usbGateway) {
+            logger.info("---- CONNECTED to Zigbee USB gateway bridge '{}' (serialPort: {})", thing.getUID(),
+                    usbGateway.getSerialPortName());
         } else {
             logger.info("---- CONNECTED to BUS gateway bridge '{}' ({}:{})", thing.getUID(),
                     ((BUSGateway) gw).getHost(), ((BUSGateway) gw).getPort());
@@ -645,7 +708,16 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
      * @return the ownId String
      */
     public String ownIdFromMessage(BaseOpenMessage baseMsg) {
-        return baseMsg.getWho().value() + "." + normalizeWhere(baseMsg.getWhere());
+        @Nullable
+        Where w = baseMsg.getWhere();
+        if (w != null) {
+            return baseMsg.getWho().value() + "." + normalizeWhere(w);
+        } else if (baseMsg instanceof Alarm) { // null and Alarm
+            return baseMsg.getWho().value() + "." + "0"; // Alarm System --> where=0
+        } else {
+            logger.warn("ownIdFromMessage with null where: {}", baseMsg);
+            return "";
+        }
     }
 
     /**
@@ -666,13 +738,15 @@ public class OpenWebNetBridgeHandler extends ConfigStatusBridgeHandler implement
      */
     public String normalizeWhere(Where where) {
         String str = where.value();
-        if (where instanceof WhereZigBee) {
-            str = ((WhereZigBee) where).valueWithUnit(WhereZigBee.UNIT_ALL); // 76543210X#9 --> 765432100#9
+        if (where instanceof WhereZigBee whereZigBee) {
+            str = whereZigBee.valueWithUnit(WhereZigBee.UNIT_ALL); // 76543210X#9 --> 765432100#9
         } else {
             if (str.indexOf("#4#") == -1) { // skip APL#4#bus case
-                if (str.indexOf('#') == 0) { // Thermo central unit (#0) or zone via central unit (#Z, Z=[1-99]) --> Z
+                if (str.indexOf('#') == 0) { // Thermo central unit (#0) or zone via central unit (#Z, Z=[1-99]) --> Z,
+                                             // Alarm Zone (#Z) --> Z
                     str = str.substring(1);
-                } else if (str.indexOf('#') > 0) { // Thermo zone Z and actuator N (Z#N, Z=[1-99], N=[1-9]) --> Z
+                } else if (str.indexOf('#') > 0 && str.charAt(0) != '0') { // Thermo zone Z and actuator N (Z#N,
+                                                                           // Z=[1-99], N=[1-9]) --> Z
                     str = str.substring(0, str.indexOf('#'));
                 }
             }
